--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,10 @@
     margin-bottom: 5rem;
 }
 
+.form-text {
+    color: red;
+}
+
 .map-responsive {
     overflow:hidden;
     padding-bottom:56.25%;
