--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
     overflow: hidden;
     background-color:black;
     height: 100vh;
+    padding-top: 0 !important;
 }
 
 .jumbotron video {
@@ -42,10 +43,13 @@
 .scroll-down {
     position: absolute;
     bottom: 2rem;
-    transform: translate(-50%, -50%);    
+    left: 50%;
     z-index: 2;
     animation: oscillate ease-in-out 2s infinite;
-    cursor: pointer;
+}
+
+.scroll-down i {
+    transform: translate(-50%);
 }
 
 .scroll-down, .scroll-down:hover {
@@ -105,6 +109,30 @@
 
 #testimoni .card {
     min-height: 25rem;
+
+}
+
+#testimoni div[class^="col-"] {
+    transition-property: opacity;
+    transition-duration: .5s;
+    transition-timing-function: ease-in;
+    opacity: 0;
+}
+
+#testimoni.scrolled div[class^="col-"] {
+    opacity: 1;
+}
+
+#testimoni  div[class^="col-"]:nth-child(1) {
+    transition-delay: .3s;
+}
+
+#testimoni  div[class^="col-"]:nth-child(2) {
+    transition-delay: .6s;
+}
+
+#testimoni  div[class^="col-"]:nth-child(3) {
+    transition-delay: .9s;
 }
 
 #contact {
@@ -132,7 +160,7 @@
 
 footer {
     background-color: #343a40;
-    padding: 1rem 0;
+    padding: 2rem 0;
     color: white;    
 }
 
